--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,6 +21,7 @@ glide = "4.16.0"
 work = "2.9.1"
 chucker = "4.0.0"
 ksp = "2.0.21-1.0.25"
+paging = "3.3.2"
 testCore = "1.6.1"
 testRules = "1.6.1"
 archCoreTesting = "2.2.0"
@@ -68,6 +69,7 @@ glide-compiler = { group = "com.github.bumptech.glide", name = "compiler", versi
 androidx-work = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "work" }
 chucker = { group = "com.github.chuckerteam.chucker", name = "library", version.ref = "chucker" }
 chucker-noop = { group = "com.github.chuckerteam.chucker", name = "library-no-op", version.ref = "chucker" }
+androidx-paging-runtime = { group = "androidx.paging", name = "paging-runtime-ktx", version.ref = "paging" }
 androidx-uiautomator = { group = "androidx.test.uiautomator", name = "uiautomator", version.ref = "uiautomator" }
 
 [plugins]
